AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/service/impl/RequestForProposalServiceImpl.java:
Changes:
- Fixed missing generic type on Specification for type safety.
- Improved null checks and collection handling to avoid potential NullPointerExceptions.
- Simplified stream usage and replaced deprecated or awkward constructions.
- Optimized recursion to reuse depth counter instead of creating new AtomicInteger instances unnecessarily.
- Enhanced sorting comparators with clearer variable names and safer parsing to prevent NumberFormatException.
- Improved naming conventions for methods and variables for clarity (e.g., consistent pluralization).
- Removed redundant repository save calls (such as inside loops).
- Ensured transactional boundary covers method operations where needed.
- Minor formatting and readability improvements for method chaining and lambda expressions.
- Added appropriate final modifiers where suitable.
- Null-safe usage improved in updateRequestForProposal method.
- Avoided multiple repository calls for same data, caching when possible within method scope.
- Used Java 8+ streams and collectors idiomatic usage (e.g., .toList) consistently.
- Added comments where recursion and complex logic occur for better maintainability and understanding.